# doint

./: Cargo.toml  README.md  contributing.md  diesel.toml
.github/workflows/: rust.yml
migrations/2025-09-16-012748-0000_create_users/: down.sql  up.sql
migrations/2025-09-16-062505-0000_add_bank/: down.sql  up.sql
migrations/2025-09-16-223858-0000_add_ubi_to_bank/: down.sql  up.sql
migrations/2025-09-17-005546-0000_add_fees_table/: down.sql  up.sql
migrations/2025-09-20-080917-0000_add_jail/: down.sql  up.sql
migrations/2025-09-26-022354-0000_switch_to_decimal_doint/: down.sql  up.sql
migrations/2025-09-27-222707-0000_notifications/: down.sql  up.sql
src/: errors.rs  formatter.rs  guards.rs  lib.rs  main.rs  prelude.rs  schema.rs
src/bank/: bank_struct.rs  mod.rs
src/bank/calculate/: balance.rs  fees.rs  mod.rs
src/bank/deposit/: mod.rs  pay_bank.rs  taxes.rs
src/bank/modify/: mod.rs  set_rate.rs
src/bank/movement/: mod.rs  move_doints.rs
src/bank/withdrawal/: mod.rs  ubi.rs
src/consent/: consent_button.rs  dointer_role.rs  mod.rs
src/database/: mod.rs
src/database/connection/: mod.rs
src/database/queries/: get_user.rs  leaderboard.rs  mod.rs  top_n.rs  user.rs
src/database/tables/: bank.rs  fees.rs  jail.rs  (+3 more)
src/delta/: mod.rs
src/discord/: mod.rs  prelude.rs  start.rs
src/event/: event_struct.rs  mod.rs
src/formatting/: doint_display.rs  format_struct.rs  mod.rs
src/handlers/: mod.rs
src/invocable/: mod.rs  opt_in.rs
src/invokable/: mod.rs
src/jail/: arrest.rs  check.rs  error.rs  free.rs  mod.rs  reasons.rs
src/knob/: channels.rs  economy.rs  emoji.rs  formatting.rs  guild.rs  mod.rs  playing_card_emoji.rs  roles.rs  terms_and_conditions.rs
src/models/: mod.rs  prelude.rs
src/notification/: admin_notification.rs  mapping.rs  mod.rs  notification_settings.rs  notification_struct.rs  user_notification.rs
src/tests/: bank.rs  casino.rs  formatter.rs  mod.rs  settings.rs  setup.rs
src/types/: mod.rs  serenity_types.rs
src/user/: mod.rs  user_settings.rs  user_settings_menu.rs
(+75 files in other folders)
