[package]
name = "doint"
version = "0.1.0"
edition = "2024"

[lints.rust]
unused_must_use = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[dependencies]
bigdecimal = { version = "0.4.8", features = ["serde"] }
chrono = "0.4.42"
diesel = { version = "2.2.12", features = ["mysql", "mysql_backend", "r2d2", "chrono", "numeric", "serde_json"] }
documented = "0.9.2"
dotenvy = "0.15.7"
env_logger = "0.11.8"
lazy_static = "1.5.0"
log = "0.4.28"
poise = "0.6.1"
rand = "0.9.2"
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread"] }
