[package]
name = "doint"
version = "0.1.0"
edition = "2024"

[lints.rust]
unused_must_use = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[dependencies]
bigdecimal = { version = "0.4", features = ["serde"] }
chrono = "0.4"
diesel = { version = "2.2", features = ["mysql", "r2d2", "chrono", "numeric"] }
dotenvy = "0.15"
env_logger = "0.11"
lazy_static = "1.5"
log = "0.4"
poise = "0.6"
rand = "0.9"
thiserror = "2.0"
tokio = { version = "1.47", features = ["rt", "rt-multi-thread"] }
